game section mobile  view fixed for headline

--- a/css/style.css
+++ b/css/style.css
@@ -1052,4 +1052,9 @@ button {
     .game-tags > li:nth-child(1) {
         display: block;
     }
+    .game-card-right {
+        background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+        padding: 0px 0px;
+        margin: 0;
+    }
 }
